# metagraph

./: .gitignore  Cargo.toml  README.md
src/: error.rs  graph_object.rs  lib.rs  meta_data.rs  scraper.rs
src/open_graph/: mod.rs  open_graph_object.rs
src/open_graph/property/: audio.rs  determiner.rs  image.rs  locale.rs  mod.rs  video.rs
src/twitter/: mod.rs  twitter_graph_object.rs
src/twitter/property/: creator.rs  image.rs  mod.rs  player.rs
